--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -20,7 +20,7 @@ jobs:
   
   run-windows-commands:
     runs-on: windows-latest
-    needs: [run-shell-command]
+    # needs: [run-shell-command]
     steps:
       - name: Directory PowerShell
         run: Get-Location
