--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -6,6 +6,10 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
+      - name: Listing files
+        run: |
+          pwd
+          ls
       - name: Simple Javascript Action
         id: simple-action
         uses: actions/hello-world-javascript-action@v1 # import actions from github
