--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -10,6 +10,15 @@ jobs:
         run: |
           pwd
           ls
+
+      - name: Checkout files
+        uses: actions/checkout@v1
+
+      - name: Listing files after checking out
+        run: |
+          pwd
+          ls
+
       - name: Simple Javascript Action
         id: simple-action
         uses: actions/hello-world-javascript-action@v1 # import actions from github
