--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,8 +14,8 @@ jobs:
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
           echo "${{ github.token }}"
-          git clone git@github:$GITHUB_REPOSITORY
-          git checkout $GITHUB_SHA
+          # git clone git@github:$GITHUB_REPOSITORY
+          # git checkout $GITHUB_SHA
 
       - name: Checkout files
         uses: actions/checkout@v1
